Writing through lead item

--- a/2025/2025-12-21-wir.md
+++ b/2025/2025-12-21-wir.md
@@ -6,91 +6,38 @@
 
 <!-- Blog re: content strategy for '26. Should run ~300 words -->
 
-**Like a lot of people these days,** I'm sick to death of corporate social platforms. In that spirit, this will be my last regular update of w3w via Substack. In effect, I'll also be retiring the w3w brand in general. <!-- Could use a link here to a news story about declining public faith in the Big Tech platforms. -->
+**Like a lot of people these days,** I'm sick to death of corporate social platforms. In that spirit, this will be my last regular update of w3w via Substack. In effect, I'll also be retiring the w3w brand in general in the New Year.
 
-But fear not: I will continue to write about emerging tech (and sometimes other topics as well) via my self-hosted personal blog. And that site will maintain its own email distribution list as well, starting Jan. 30.
+But fear not: I will continue to write about emerging tech (and sometimes other topics as well) via my [self-hosted personal blog](https://blog.pmckay.com/). And that site will maintain its own email distribution list as well, starting Jan. 30.
 
-So if you want to keep getting updates like this from me via your inbox, just hang tight. By default, I will include all w3w's Substack subcribers as of Jan. 30 on the new email distribution list. Thus we can continue our conversation about tech into 2026 and beyond.
+So if you want to keep getting updates like this from me via your inbox, just hang tight. No action needed. By default, I will include all w3w's Substack subcribers as of Jan. 30 on my blog's new email distribution list. Thus we can continue our conversation about tech into 2026 and beyond, if you want.
 
 To be honest, w3w was always basically a one-man show anyway. So I figure this approach will make sense for most subscribers.
 
-That said, I also want to be transparent about moving people's email addresses from one service to another. If you don't want to be included on my post-Substack distribution list, there are two ways to opt out:
+That said, I also want to be transparent about moving people's email addresses from one service to another. If you *don't* want to be included on my post-Substack distribution list, there are two ways to opt out:
 
-- Unsubscribe from w3w on Substack before Jan. 30. Or...
+- **Unsubscribe from w3w** via [Substack](https://w3wnews.substack.com/action/disable_email?utm_source=substack&utm_medium=email) before Jan. 30. Or...
 
-- Drop me a direct message via email at peter[at]pmckay[dot]come, and I will remove you manually. (This is also a good option if you have questions or comments you want to pass along.)
+- **Email me directly** at peter[at]pmckay[dot]come, and I will remove you manually. (This is also a good option if you have questions or comments you want to pass along. I'm all ears!)
 
+Many thanks to everyone who has followed and spent time with w3w over the years. For paid subscribers, I still need to do my 2025 tech outlook soon. So please do keep an eye out for that.
 
+All that said, I do think it's time to change things up a bit. In 2026, I anticipate a looser publication schedule via my personal site, with more experimentation in different media formats. I'd like to do more video in particular. Maybe write a book as well.  
 
-<!-- -->
-
-<!-- why -->
-
-<!-- thanks/history -->
-
-<!-- CTA for gigs/hiring -->
-
-<!--
-
-Other notes, etc...
-
-I'm taking this year-end period as an opportunity to reassess which ones are still truly useful for me and which ones I could really do without.
-
-I figure this will help me minimize exposure to the nastier aspects of corporate platforms, but still maintain a community, etc.
-
-Stricter POSSE approach.
-
--->
-
-
+In that sense, the changes described above mark a new beginning. Stay tuned. 😊
 
 ### Week in Review: Dec. 14-20, 2025
 
-- **Stablecoins:** FDIC proposes new stablecoins rules. ([]()) <!-- Link TK --> | Gold-backed stablecoins are booming. ([The Block](https://www.theblock.co/post/382582/gold-backed-stablecoins-near-4-billion-as-safe-haven-demand-grows-onchain)) | Visa launches new stablecoin settlement ([The Block](https://www.theblock.co/post/382721/visa-launches-stablecoin-settlement-us-circle-usdc-solana?utm_source=robinhood&utm_medium=rss)) |  ([Decrypt](https://decrypt.co/352548/visa-begins-us-stablecoin-settlement-usdc-solana))
+- **Despite a 6% decline in bitcoin's price this year,** BlackRock's exchange-traded bitcoin fund (IBIT) has seen a $25 billion inflow of investor cash. The surge of investment activity underscores the increasing appetite for bitcoin exposure among conventional finance firms that prefer a vehicle listed on Wall Street's public securities exchanges. ([CoinDesk](https://www.coindesk.com/markets/2025/12/20/blackrock-s-bitcoin-etf-rare-fund-with-massive-2025-inflows-despite-negative-performance))
 
-- The Federal Reserve is seeking public feedback on a proposed "payment account" or "skinny master account" that would grant certain institutions, potentially including crypto-related firms, limited access to the central bank's payment services. This account would allow eligible institutions to clear and settle payments without the full privileges of a traditional master account, while keeping the payments system safe. Comments on the proposal are due in 45 days. ([The Block](https://www.theblock.co/post/383343/fed-seeks-public-input-on-skinny-master-account-for-limited-access-to-the-central-bank)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Gold-backed stablecoins are booming.** The Block reports that the combined valuation of such tokens recently [topped $4 billion](https://www.theblock.co/post/382582/gold-backed-stablecoins-near-4-billion-as-safe-haven-demand-grows-onchain), led by Tether Gold (XAUt).
 
-- The SEC is seeking to bar former Alameda CEO Caroline Ellison and former FTX executives Gary Wang and Nishad Singh from being directors or officers of public companies for several years. Ellison agreed to a 10-year ban, while Wang and Singh agreed to an 8-year ban, as part of a proposed consent judgment related to their roles in the collapse of FTX and Alameda Research. The SEC previously charged the three executives with defrauding investors and reached a settlement. ([The Block](https://www.theblock.co/post/383363/sec-seeks-multi-year-officer-director-bans-alameda-ceo-ellison-ftx-execs-wang-singh)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **In the U.S., progress on crypto payments:** Both the [Federal Reserve](https://www.theblock.co/post/383343/fed-seeks-public-input-on-skinny-master-account-for-limited-access-to-the-central-bank) and the [Federal Deposit Insurance Corp.](https://seekingalpha.com/news/4532081-fdic-lays-the-groundwork-for-bank-issued-payment-stablecoins) (FDIC) proposed new rules for their regulated institutions to handle crypto payments in ways that limit risk to firms' conventional asset reserves... Visa announced a [new payment settlement service](https://www.theblock.co/post/382721/visa-launches-stablecoin-settlement-us-circle-usdc-solana) in America using the USDC token on the Solana network.
 
-- **UK Treasury plans new rules to stricter crypto market oversight** *The Guardian: UK regulators are preparing to expand the regulatory perimeter around cryptocurrencies to protect consumers — a major development in digital asset policy.* [https://www.theguardian.com/technology/2025/dec/15/uk-treasury-drawing-up-new-rules-to-police-cryptocurrency-markets](https://www.theguardian.com/technology/2025/dec/15/uk-treasury-drawing-up-new-rules-to-police-cryptocurrency-markets) ([The Guardian][5]) <!-- ChatGPT --> | UK crypto ownship is down ([The Block](https://www.theblock.co/post/382722/uk-crypto-ownership-falls-2025-fca))
+- **The Securities and Exchange Commission slapped lengthy bans** on a trio of former FTX executives from serving as officers or directors of U.S.-listed public companies. ([The Block](https://www.theblock.co/post/383363/sec-seeks-multi-year-officer-director-bans-alameda-ceo-ellison-ftx-execs-wang-singh))
 
-- Google has been aggressively rehiring former employees, with 20% of its AI software engineers hired in 2025 being so-called "boomerang employees." This trend is part of the company's efforts to compete for AI talent, which has been heating up between companies like OpenAI, Meta, and Anthropic. Google's deep pockets and computational infrastructure are major draws for AI-focused software engineers. ([CNBC](https://www.cnbc.com/2025/12/19/google-boomerang-year-20percent-ai-software-devs-hired-2025-ex-employees.html)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Google has been aggressively rehiring former employees.** About 20% of its AI software engineers hired in 2025 have been so-called "boomerang employees." ([CNBC](https://www.cnbc.com/2025/12/19/google-boomerang-year-20percent-ai-software-devs-hired-2025-ex-employees.html))
 
-- JPM launched its first tokenized money-market fund. ([]()) <!-- Link TK --> | **JPMorgan uses blockchain for commercial debt issuance** *Reuters: JPMorgan issues commercial paper on the Solana blockchain using USDC, signaling deeper institutional adoption of blockchain for traditional financial instruments.* [https://www.reuters.com/technology/jp-morgan-harnesses-blockchain-debt-issuance-amid-digital-asset-adoption-boost-2025-12-11/](https://www.reuters.com/technology/jp-morgan-harnesses-blockchain-debt-issuance-amid-digital-asset-adoption-boost-2025-12-11/) ([Reuters][6]) <!-- ChatGPT -->
-
-
-<!--
-
-Additional candidates...
-
-- Crypto liquidity is shrinking ahead of the holidays ([Decrypt](https://decrypt.co/352522/crypto-market-liquidity-shrinks-ahead-of-holidays))
-
-- **HashKey Debuts on Hong Kong Exchange Following $206 Million IPO** The licensed crypto platform HashKey officially began trading on the Hong Kong Stock Exchange on December 17. Despite a slight slide in share price during its debut, the $206 million IPO marks a milestone for the city's ambition to become a regulated global hub for virtual assets. **Full Article:** [HashKey shares slide 3% in Hong Kong debut after $206 million IPO](https://www.theblock.co/latest-crypto-news)  <!-- Gemini
-
-- **Hut 8 Seals $7 Billion AI Data Center Lease with Anthropic** In a massive shift from crypto mining to AI infrastructure, Hut 8 has signed a 15-year lease agreement with AI developer Anthropic and infrastructure provider Fluidstack. The deal, which involves a financial backstop from Google, underscores the urgent demand for massive compute power and represents one of the largest infrastructure plays in the current AI arms race.
-**Full Article:** [Hut 8 shares jump as ex-bitcoin miner signs US$7 billion AI data centre lease](https://www.bnnbloomberg.ca/investing/2025/12/17/hut-8-shares-jump-as-ex-bitcoin-miner-signs-us7-billion-ai-data-center-lease/) <!-- Gemini
-
-- **Big Tech M&A Spree Signals Strategic Shift in AI Strategy** A flurry of recent acquisitions—including Intel’s pursuit of SambaNova, NVIDIA’s purchase of SchedMD, and ServiceNow’s deals for Moveworks and Armis—indicates that tech giants are moving away from organic development toward aggressive consolidation. This "M&A spree" suggests a new chapter where established players buy ready-made expertise to maintain their lead in the AI sector.
-**Full Article:** [Big Tech's M&A Spree Signals New Chapter in AI Arms Race](https://techstrong.ai/features/big-techs-ma-spree-signals-new-chapter-in-ai-arms-race/)  <!-- Gemini
-
-- **SEC Chair Paul Atkins Signals Pro-Privacy Path for Digital Assets** In a significant policy shift, SEC Chair Paul Atkins stated that while crypto could be a "powerful financial surveillance tool," there is a regulatory path forward that preserves user privacy without compromising oversight. This balanced approach comes as the SEC concludes several long-standing investigations, including a four-year probe into the DeFi protocol Aave.
-**Full Article:** [SEC Chair Atkins says crypto could become 'powerful financial surveillance' tool, sees path forward](https://www.theblock.co/post/382496/bitcoin-stalls-after-post-fomc-slide-as-inflation-data-looms-over-december-analysts-say)  <!-- Gemini
-
-- **PNC Bank Launches Direct Bitcoin Trading for Private Clients** Breaking from traditional banking caution, PNC Bank has integrated with Coinbase to offer direct spot bitcoin trading for its high-net-worth clients. This move makes PNC one of the first major U.S. lenders to allow customers to manage digital assets directly within their existing investment accounts, rather than through external ETFs.
-**Full Article:** [PNC rolls out direct BTC trading for high-net-worth clients](https://www.theblock.co/post/381962/the-daily-standard-chartered-slashes-2025-bitcoin-target-pnc-rolls-out-direct-btc-trading-for-high-net-worth-clients-and-more)  <!-- Gemini
-
-- **TIME names the “Architects of AI” as Person of the Year**
-*Associated Press: TIME spotlights the tech leaders behind AI’s rapid societal and economic impact, underscoring how AI has moved from niche to ubiquitous in 2025.*
-[https://apnews.com/article/77ec65c6792bc99ec2ce1919c5f421ea](https://apnews.com/article/77ec65c6792bc99ec2ce1919c5f421ea) ([AP News][2]) <!-- ChatGPT
-
-- **Executives still bullish on AI despite slower adoption in business**
-*Reuters: Corporate leaders say generative AI will transform business eventually, but many are delaying planned AI spending as real-world integration proves slower than early hype.*
-[https://www.reuters.com/business/business-leaders-agree-ai-is-future-they-just-wish-it-worked-right-now-2025-12-16/](https://www.reuters.com/business/business-leaders-agree-ai-is-future-they-just-wish-it-worked-right-now-2025-12-16/) ([Reuters][3]) <!-- ChatGPT
-
-- **Crypto investors adapt strategies after market downturn**
-*Reuters: After a crypto market crash, investors are showing growing caution and pivoting to active risk management approaches — a key narrative as 2025 draws to a close.* [https://www.reuters.com/business/finance/crypto-investors-show-caution-shift-new-strategies-after-crash-2025-12-17/](https://www.reuters.com/business/finance/crypto-investors-show-caution-shift-new-strategies-after-crash-2025-12-17/) ([Reuters][4]) <!-- ChatGPT
-
--->
 
 ### Market Snapshot
 
@@ -149,19 +96,17 @@ Additional candidates...
 
 ### Looking Ahead
 
-- **Mixed news for crypto in the U.S. Senate.** The Senate's crypto market structure bill, known as the Clarity Act, is set for a January markup, moving the landmark legislation closer to a floor vote. The bill aims to establish a comprehensive federal framework for digital assets by defining regulatory jurisdiction between the Securities and Exchange Commission and the Commodity Futures Trading Commission. However, Democratic concerns over regulatory independence and potential presidential power to appoint and remove agency commissioners may impact the bill's passage. ([Decrypt](https://decrypt.co/352981/senators-set-january-markup-for-crypto-market-structure-bill)) <!-- Draft summary by Leo/Llama 3.1 8B --> | Sen. Cynthia Lummis, a strong ally to the crypto industry in Washington, has announced she will not seek reelection when her term expires next year. Lummis, often referred to as the "Bitcoin Senator," has been instrumental in passing industry-favored legislation, including the GENIUS Act, which established a federal framework for stablecoins. Her retirement will likely impact ongoing negotiations over the crypto industry's coveted market structure bill. ([Decrypt](https://decrypt.co/353210/bitcoin-senator-cynthia-lummis-not-run-reelection)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Mixed news for crypto in the U.S. Senate:** Key committees are set to take up the Clarity Act, a major market structure bill, in January. That moves the legislation [closer to a full floor vote](https://decrypt.co/352981/senators-set-january-markup-for-crypto-market-structure-bill) early next year... On a less auspicious note, Sen. Cynthia Lummis, a staunchly pro-crypto Republican from Wyoming, said she will [not seek re-election](https://www.politico.com/news/2025/12/19/cynthia-lummis-crypto-retirement-00700961) next year.
 
-- Mizuho says Coinbase could cannibalize its core crypto business by launching a predictions market. ([Decrypt](https://decrypt.co/352554/coinbase-risks-crypto-cannibalization-prediction-market-push-mizuho)) |
+- **The U.K. Treasury is drawing up rules** for the country's Financial Conduct Authority to begin [overseeing crypto companies](https://www.theguardian.com/technology/2025/dec/15/uk-treasury-drawing-up-new-rules-to-police-cryptocurrency-markets) in 2027 in a way similar to conventional financial firms. The push for clearer rules comes at a time when public confidence in the token market appears to be at an ebb in Britain. In 2025, the rate of crypto ownership among U.K. adults has [fallen to just 8%](https://www.theblock.co/post/382722/uk-crypto-ownership-falls-2025-fca), down from 12% in 2024.
 
-- Coinbase has filed federal lawsuits in three states, including Illinois, to challenge state attempts to block prediction markets, arguing that they fall under the Commodity Futures Trading Commission's authority rather than individual state gaming boards. The lawsuits come as Coinbase prepares to launch prediction markets in January 2026 through a partnership with Kalshi, a CFTC-registered designated contract market. This move is seen as a significant validation of the prediction market industry, with some experts predicting a shift from a duopoly to a more competitive market in 2026. ([Decrypt](https://decrypt.co/352984/coinbase-sues-three-states-over-prediction-market-regulation)) <!-- Draft summary by Leo/Llama 3.1 8B -->
-
-- **How AI’s power demands are reshaping energy infrastructure** *Reuters: Energy use tied to explosive AI growth is pushing companies toward unconventional power solutions, including small modular nuclear reactors and renewables to avoid grid shortfalls.* [https://www.reuters.com/sustainability/climate-energy/time-go-nuclear-inside-battle-power-ai--ecmii-2025-12-17/](https://www.reuters.com/sustainability/climate-energy/time-go-nuclear-inside-battle-power-ai--ecmii-2025-12-17/) ([Reuters][1]) <!-- ChatGPT -->
+- **Analysts at Mizuho** fretted in a recent note that Coinbase's plan to launch a prediction market could ["cannibalize"](https://decrypt.co/352554/coinbase-risks-crypto-cannibalization-prediction-market-push-mizuho) the company's core token-trading business. Hmm...
 
 ### Odds & Ends
 
--  **Merriam-Webster Names "Slop" the 2025 Word of the Year** Reflecting a cultural pushback against the proliferation of low-quality AI-generated content, Merriam-Webster has selected "slop" as its Word of the Year. The term, which describes the "digital rubbish" produced at scale by AI, highlights growing public frustration with "hallucinating" systems and the limitations of current generative models. Full Article:** ['Slop' chosen as Merriam-Webster's 2025 Word of the Year](https://www.tbsnews.net/offbeat/slop-chosen-merriam-websters-2025-word-year-1311921)  <!-- Gemini -->
+- **Opioid treatment in the U.S. could stand a big update,** writes Dr. Zoe Adams in [Slate](https://slate.com/technology/2025/12/rob-reiner-nick-michele-singer-death-murder-addiction-rehab.html). She's hoping the tragic murders of Rob and Michele Reiner, allegedly at the hands of their son who had been out of drug rehab 18 times in his life, might spark more conversation about needed changes. Adams notes that U.S. residential rehab facilities tend to emphasize 12-step programming pioneered by Alcoholics Anonymous, relying entirely on sudden and complete withdrawal. Only 30% of facilities offer drugs like buprenorphine or methadone that have been medically proven to help wean addicts off opioids.
 
-- Duck-related Seaworld suit: https://www.wsbtv.com/news/trending/woman-suing-sea-world-over-being-hit-by-duck-coaster-wasnt-hit-by-duck-lawyers-say/65P6G76YKFCJXKWA3TO37IOL2Q/
+-  **Merriam-Webster** named "slop" its [2025 Word of the Year](https://www.merriam-webster.com/wordplay/word-of-the-year). Out of several distinct [definitions](https://www.merriam-webster.com/dictionary/slop) for the word, the venerable dictionary publisher now lists this one first: *"digital content of low quality that is produced usually in quantity by means of artificial intelligence."*
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
@@ -170,3 +115,41 @@ _**Please note, I regularly use several AI apps to assist production of w3w. But
 _**If you need to reach me directly, please email peter[at]pmckay[dot]com.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
+
+<!--
+
+Additional candidates...
+
+- Crypto liquidity is shrinking ahead of the holidays ([Decrypt](https://decrypt.co/352522/crypto-market-liquidity-shrinks-ahead-of-holidays))
+
+- **HashKey Debuts on Hong Kong Exchange Following $206 Million IPO** The licensed crypto platform HashKey officially began trading on the Hong Kong Stock Exchange on December 17. Despite a slight slide in share price during its debut, the $206 million IPO marks a milestone for the city's ambition to become a regulated global hub for virtual assets. **Full Article:** [HashKey shares slide 3% in Hong Kong debut after $206 million IPO](https://www.theblock.co/latest-crypto-news)  <!-- Gemini
+
+- **Hut 8 Seals $7 Billion AI Data Center Lease with Anthropic** In a massive shift from crypto mining to AI infrastructure, Hut 8 has signed a 15-year lease agreement with AI developer Anthropic and infrastructure provider Fluidstack. The deal, which involves a financial backstop from Google, underscores the urgent demand for massive compute power and represents one of the largest infrastructure plays in the current AI arms race.
+**Full Article:** [Hut 8 shares jump as ex-bitcoin miner signs US$7 billion AI data centre lease](https://www.bnnbloomberg.ca/investing/2025/12/17/hut-8-shares-jump-as-ex-bitcoin-miner-signs-us7-billion-ai-data-center-lease/) <!-- Gemini
+
+- **Big Tech M&A Spree Signals Strategic Shift in AI Strategy** A flurry of recent acquisitions—including Intel’s pursuit of SambaNova, NVIDIA’s purchase of SchedMD, and ServiceNow’s deals for Moveworks and Armis—indicates that tech giants are moving away from organic development toward aggressive consolidation. This "M&A spree" suggests a new chapter where established players buy ready-made expertise to maintain their lead in the AI sector.
+**Full Article:** [Big Tech's M&A Spree Signals New Chapter in AI Arms Race](https://techstrong.ai/features/big-techs-ma-spree-signals-new-chapter-in-ai-arms-race/)  <!-- Gemini
+
+- **SEC Chair Paul Atkins Signals Pro-Privacy Path for Digital Assets** In a significant policy shift, SEC Chair Paul Atkins stated that while crypto could be a "powerful financial surveillance tool," there is a regulatory path forward that preserves user privacy without compromising oversight. This balanced approach comes as the SEC concludes several long-standing investigations, including a four-year probe into the DeFi protocol Aave.
+**Full Article:** [SEC Chair Atkins says crypto could become 'powerful financial surveillance' tool, sees path forward](https://www.theblock.co/post/382496/bitcoin-stalls-after-post-fomc-slide-as-inflation-data-looms-over-december-analysts-say)  <!-- Gemini
+
+- **PNC Bank Launches Direct Bitcoin Trading for Private Clients** Breaking from traditional banking caution, PNC Bank has integrated with Coinbase to offer direct spot bitcoin trading for its high-net-worth clients. This move makes PNC one of the first major U.S. lenders to allow customers to manage digital assets directly within their existing investment accounts, rather than through external ETFs.
+**Full Article:** [PNC rolls out direct BTC trading for high-net-worth clients](https://www.theblock.co/post/381962/the-daily-standard-chartered-slashes-2025-bitcoin-target-pnc-rolls-out-direct-btc-trading-for-high-net-worth-clients-and-more)  <!-- Gemini
+
+- **TIME names the “Architects of AI” as Person of the Year**
+*Associated Press: TIME spotlights the tech leaders behind AI’s rapid societal and economic impact, underscoring how AI has moved from niche to ubiquitous in 2025.*
+[https://apnews.com/article/77ec65c6792bc99ec2ce1919c5f421ea](https://apnews.com/article/77ec65c6792bc99ec2ce1919c5f421ea) ([AP News][2]) <!-- ChatGPT
+
+- **Executives still bullish on AI despite slower adoption in business**
+*Reuters: Corporate leaders say generative AI will transform business eventually, but many are delaying planned AI spending as real-world integration proves slower than early hype.*
+[https://www.reuters.com/business/business-leaders-agree-ai-is-future-they-just-wish-it-worked-right-now-2025-12-16/](https://www.reuters.com/business/business-leaders-agree-ai-is-future-they-just-wish-it-worked-right-now-2025-12-16/) ([Reuters][3]) <!-- ChatGPT
+
+- **Crypto investors adapt strategies after market downturn**
+*Reuters: After a crypto market crash, investors are showing growing caution and pivoting to active risk management approaches — a key narrative as 2025 draws to a close.* [https://www.reuters.com/business/finance/crypto-investors-show-caution-shift-new-strategies-after-crash-2025-12-17/](https://www.reuters.com/business/finance/crypto-investors-show-caution-shift-new-strategies-after-crash-2025-12-17/) ([Reuters][4]) <!-- ChatGPT
+
+- **How AI’s power demands are reshaping energy infrastructure** *Reuters: Energy use tied to explosive AI growth is pushing companies toward unconventional power solutions, including small modular nuclear reactors and renewables to avoid grid shortfalls.* [https://www.reuters.com/sustainability/climate-energy/time-go-nuclear-inside-battle-power-ai--ecmii-2025-12-17/](https://www.reuters.com/sustainability/climate-energy/time-go-nuclear-inside-battle-power-ai--ecmii-2025-12-17/) ([Reuters][1]) <!-- ChatGPT
+
+- Duck-related Seaworld suit: https://www.wsbtv.com/news/trending/woman-suing-sea-world-over-being-hit-by-duck-coaster-wasnt-hit-by-duck-lawyers-say/65P6G76YKFCJXKWA3TO37IOL2Q/
+
+
+- JPM launched its first tokenized money-market fund. ([]()) <!-- Link TK  | **JPMorgan uses blockchain for commercial debt issuance** *Reuters: JPMorgan issues commercial paper on the Solana blockchain using USDC, signaling deeper institutional adoption of blockchain for traditional financial instruments.* [https://www.reuters.com/technology/jp-morgan-harnesses-blockchain-debt-issuance-amid-digital-asset-adoption-boost-2025-12-11/](https://www.reuters.com/technology/jp-morgan-harnesses-blockchain-debt-issuance-amid-digital-asset-adoption-boost-2025-12-11/) ([Reuters][6]) <!-- ChatGPT -->
