Copedits + hedline/subhed via Copilot

--- a/2025/2025-12-21-wir.md
+++ b/2025/2025-12-21-wir.md
@@ -1,5 +1,5 @@
 # Sunsetting w3w
-## TKTK
+## This is my final newsletter update via Substack. But I'll continue writing about emerging tech and more on my self-hosted site.
 
 ![Closeup of content creation tools, including a laptop and digital SLR camera](https://w3w.news/img/content-tools-phil-monte-3000.jpg)  
 *Photo by Phil Monte via [Unsplash](https://unsplash.com/@philgmonte)*
@@ -10,15 +10,15 @@
 
 But fear not: I will continue to write about emerging tech (and sometimes other topics as well) via my [self-hosted personal blog](https://blog.pmckay.com/). And that site will maintain its own email distribution list as well, starting Jan. 30.
 
-So if you want to keep getting updates like this from me via your inbox, just hang tight. No action needed. By default, I will include all w3w's Substack subcribers as of Jan. 30 on my blog's new email distribution list. Thus we can continue our conversation about tech into 2026 and beyond, if you want.
+So if you want to keep getting updates like this from me via your inbox, just hang tight. No action needed. By default, I will include all w3w's Substack subscribers as of Jan. 30 on my blog's new email distribution list. Thus we can continue our conversation about tech into 2026 and beyond, if you want.
 
 To be honest, w3w was always basically a one-man show anyway. So I figure this approach will make sense for most subscribers.
 
-That said, I also want to be transparent about moving people's email addresses from one service to another. If you *don't* want to be included on my post-Substack distribution list, there are two ways to opt out:
+That said, I also want to be transparent about moving people's email addresses from one service to another. If you *don't* want to be included on my post-Substack distribution list, there are two easy ways to opt out:
 
 - **Unsubscribe from w3w** via [Substack](https://w3wnews.substack.com/action/disable_email?utm_source=substack&utm_medium=email) before Jan. 30. Or...
 
-- **Email me directly** at peter[at]pmckay[dot]come, and I will remove you manually. (This is also a good option if you have questions or comments you want to pass along. I'm all ears!)
+- **Email me directly** at peter[at]pmckay[dot]com, and I will remove you manually. (This is also a good option if you have questions or comments you want to pass along. I'm all ears!)
 
 Many thanks to everyone who has followed and spent time with w3w over the years. For paid subscribers, I still need to do my 2025 tech outlook soon. So please do keep an eye out for that.
 
